// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportsReducer should handle all defined error types: rejected types GET_MERGE_REPORT 1`] = `
Object {
  "result": Object {
    "error": true,
    "errorMessage": "ERROR",
    "errorStatus": 0,
    "fulfilled": false,
    "metaData": undefined,
    "metaId": undefined,
    "metaQuery": undefined,
    "pending": false,
    "update": false,
  },
  "type": "GET_MERGE_REPORT_REJECTED",
}
`;

exports[`ReportsReducer should handle all defined error types: rejected types GET_REPORTS_DOWNLOAD 1`] = `
Object {
  "result": Object {
    "error": true,
    "errorMessage": "ERROR",
    "errorStatus": 0,
    "fulfilled": false,
    "metaData": undefined,
    "metaId": undefined,
    "metaQuery": undefined,
    "pending": false,
    "update": false,
  },
  "type": "GET_REPORTS_DOWNLOAD_REJECTED",
}
`;

exports[`ReportsReducer should handle all defined fulfilled types: fulfilled types GET_MERGE_REPORT 1`] = `
Object {
  "result": Object {
    "data": Object {
      "test": "success",
    },
    "date": undefined,
    "error": false,
    "errorMessage": "",
    "errorStatus": undefined,
    "fulfilled": true,
    "metaData": undefined,
    "metaId": undefined,
    "metaQuery": undefined,
    "pending": false,
    "update": false,
  },
  "type": "GET_MERGE_REPORT_FULFILLED",
}
`;

exports[`ReportsReducer should handle all defined fulfilled types: fulfilled types GET_REPORTS_DOWNLOAD 1`] = `
Object {
  "result": Object {
    "data": Object {
      "test": "success",
    },
    "date": undefined,
    "error": false,
    "errorMessage": "",
    "errorStatus": undefined,
    "fulfilled": true,
    "metaData": undefined,
    "metaId": undefined,
    "metaQuery": undefined,
    "pending": false,
    "update": false,
  },
  "type": "GET_REPORTS_DOWNLOAD_FULFILLED",
}
`;

exports[`ReportsReducer should handle all defined pending types: pending types GET_MERGE_REPORT 1`] = `
Object {
  "result": Object {
    "error": false,
    "errorMessage": "",
    "errorStatus": undefined,
    "fulfilled": false,
    "metaData": undefined,
    "metaId": undefined,
    "metaQuery": undefined,
    "pending": true,
    "update": false,
  },
  "type": "GET_MERGE_REPORT_PENDING",
}
`;

exports[`ReportsReducer should handle all defined pending types: pending types GET_REPORTS_DOWNLOAD 1`] = `
Object {
  "result": Object {
    "error": false,
    "errorMessage": "",
    "errorStatus": undefined,
    "fulfilled": false,
    "metaData": undefined,
    "metaId": undefined,
    "metaQuery": undefined,
    "pending": true,
    "update": false,
  },
  "type": "GET_REPORTS_DOWNLOAD_PENDING",
}
`;
